--- a/src/main/resources/application-database.yml
+++ b/src/main/resources/application-database.yml
@@ -7,6 +7,7 @@ spring:
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
     url: ${DB_URL}
+    driver-class-name: com.mysql.cj.jdbc.Driver
 ---
 # Dev Profile
 spring:
@@ -17,3 +18,4 @@ spring:
     username: ${DEV_DB_USERNAME}
     password: ${DEV_DB_PASSWORD}
     url: ${DEV_DB_URL}
+    driver-class-name: com.mysql.cj.jdbc.Driver
